tests/neg/i4470a.scala
object RepeatedEnum {

  enum Maybe { // error
    case Foo
  }

  enum Maybe { // error
    case Foo
  }
}
